@@ -2,7 +2,7 @@ package com.czertainly.core.security.authz;
 
 import com.czertainly.api.exception.ValidationException;
 import com.czertainly.api.model.core.auth.Resource;
-import com.czertainly.core.dao.entity.GroupAssociation;
+import com.czertainly.core.config.OpaSecuredAnnotationMetadataExtractor;
 import com.czertainly.core.dao.repository.GroupAssociationRepository;
 import com.czertainly.core.dao.repository.OwnerAssociationRepository;
 import com.czertainly.core.model.auth.ResourceAction;
@@ -20,20 +20,20 @@ import org.aopalliance.intercept.MethodInvocation;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.annotation.AnnotationUtils;
 import org.springframework.security.authentication.AnonymousAuthenticationToken;
+import org.springframework.security.authorization.AuthorizationDecision;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Component;
-import org.springframework.web.context.request.RequestAttributes;
-import org.springframework.web.context.request.RequestContextHolder;
 
 import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 import java.util.stream.Collectors;
 
 @Component
-public class ExternalMethodAuthorizationVoter extends AbstractExternalAuthorizationVoter<MethodInvocation> {
+public class ExternalMethodAuthorizationManager extends AbstractExternalAuthorizationManager<MethodInvocation> {
 
-    protected final Log logger = LogFactory.getLog(this.getClass());
+    protected final Log log = LogFactory.getLog(this.getClass());
 
     private static final String NAME_PROP_NAME = "name";
     private static final String ACTION_PROP_NAME = "action";
@@ -47,42 +47,44 @@ public class ExternalMethodAuthorizationVoter extends AbstractExternalAuthorizat
     private final GroupAssociationRepository groupAssociationRepository;
     private final OwnerAssociationRepository ownerAssociationRepository;
 
-    public ExternalMethodAuthorizationVoter(@Autowired OpaClient opaClient, @Autowired ObjectMapper om, @Autowired GroupAssociationRepository groupAssociationRepository, @Autowired OwnerAssociationRepository ownerAssociationRepository) {
+    private final OpaSecuredAnnotationMetadataExtractor metadataExtractor;
+
+    public ExternalMethodAuthorizationManager(@Autowired OpaClient opaClient, @Autowired ObjectMapper om, @Autowired GroupAssociationRepository groupAssociationRepository, @Autowired OwnerAssociationRepository ownerAssociationRepository, @Autowired OpaSecuredAnnotationMetadataExtractor metadataExtractor) {
         this.opaClient = opaClient;
         this.om = om;
         this.groupAssociationRepository = groupAssociationRepository;
         this.ownerAssociationRepository = ownerAssociationRepository;
+        this.metadataExtractor = metadataExtractor;
     }
 
     @Override
-    public boolean supports(Class clazz) {
-        return MethodInvocation.class.isAssignableFrom(clazz);
-    }
-
-    @Override
-    protected int voteInternal(CzertainlyAuthenticationToken auth, MethodInvocation methodInvocation, List<ExternalAuthorizationConfigAttribute> attributes) {
-        int result = this.vote(auth.getPrincipal().getRawData(), methodInvocation, attributes);
-        if (result == ACCESS_DENIED) {
-            return voteGroupOwnerAssociations(auth.getPrincipal(), methodInvocation, attributes);
+    protected AuthorizationDecision checkInternal(CzertainlyAuthenticationToken auth, MethodInvocation methodInvocation) {
+        ExternalAuthorization annotation = AnnotationUtils.findAnnotation(methodInvocation.getMethod(), ExternalAuthorization.class);
+        List<ExternalAuthorizationConfigAttribute> attributes = metadataExtractor.extractAttributes(annotation);
+        AuthorizationDecision result = this.check(auth.getPrincipal().getRawData(), methodInvocation, attributes);
+        if (!result.isGranted()) {
+            return checkGroupOwnerAssociations(auth.getPrincipal(), methodInvocation, attributes);
         }
         return result;
     }
 
     @Override
-    protected int voteInternal(AnonymousAuthenticationToken authenticationToken, MethodInvocation methodInvocation, List<ExternalAuthorizationConfigAttribute> attributes) {
+    protected AuthorizationDecision checkInternal(AnonymousAuthenticationToken authenticationToken, MethodInvocation methodInvocation) {
+        ExternalAuthorization annotation = AnnotationUtils.findAnnotation(methodInvocation.getMethod(), ExternalAuthorization.class);
+        List<ExternalAuthorizationConfigAttribute> attributes = metadataExtractor.extractAttributes(annotation);
         try {
-            return this.vote(om.writeValueAsString(new AnonymousPrincipal(authenticationToken.getName())), methodInvocation, attributes);
+            return this.check(om.writeValueAsString(new AnonymousPrincipal(authenticationToken.getName())), methodInvocation, attributes);
         } catch (JsonProcessingException e) {
-            logger.error("An error occurred during voting. Access will be denied.", e);
-            return ACCESS_DENIED;
+            log.error("An error occurred during authorization on method %s. Access will be denied.".formatted(methodInvocation.getMethod().getName()), e);
+            return new AuthorizationDecision(false);
         }
     }
 
-    private int voteGroupOwnerAssociations(CzertainlyUserDetails principal, MethodInvocation methodInvocation, List<ExternalAuthorizationConfigAttribute> attributes) {
+    private AuthorizationDecision checkGroupOwnerAssociations(CzertainlyUserDetails principal, MethodInvocation methodInvocation, List<ExternalAuthorizationConfigAttribute> attributes) {
         Map<String, String> properties = attributes
                 .stream()
                 .filter(this::shouldBeSendToOpa)
-                .collect(Collectors.toMap(ExternalAuthorizationConfigAttribute::getAttributeName, ExternalAuthorizationConfigAttribute::getAttributeValueAsString));
+                .collect(Collectors.toMap(ExternalAuthorizationConfigAttribute::attributeName, ExternalAuthorizationConfigAttribute::getAttributeValueAsString));
 
         Resource resource;
         ResourceAction resourceAction;
@@ -90,8 +92,8 @@ public class ExternalMethodAuthorizationVoter extends AbstractExternalAuthorizat
             resource = Resource.findByCode(properties.get(NAME_PROP_NAME));
             resourceAction = ResourceAction.findByCode(properties.get(ACTION_PROP_NAME));
         } catch (ValidationException e) {
-            logger.trace("Unsupported resource or action: " + e.getMessage());
-            return ACCESS_DENIED;
+            log.trace("Unsupported resource or action: " + e.getMessage());
+            return new AuthorizationDecision(false);
         }
 
         // UUIDs of objects the operation is executed on
@@ -100,24 +102,30 @@ public class ExternalMethodAuthorizationVoter extends AbstractExternalAuthorizat
 
         // skip if no object UUIDs provided and it is not listing with security filter - cannot evaluate its group and owner associations
         // skip if no owner associations and no group associations (or in case groups only LIST and DETAIL action is allowed through group members permissions)
-        if ((objectUUIDs.isEmpty() && !hasSecurityFilter) || (!resource.hasOwner() && (!resource.hasGroups() || (resourceAction != ResourceAction.LIST && resourceAction != ResourceAction.DETAIL)))) {
-            return ACCESS_DENIED;
-        }
+        AuthorizationDecision decision = shouldSkipAuthorizationCheck(objectUUIDs, hasSecurityFilter, resource, resourceAction);
+        if (decision != null) return decision;
 
         // does not have objects so grant access since later objects will be filtered out by SecurityFilter
         if (objectUUIDs.isEmpty()) {
-            return ACCESS_GRANTED;
+            return new AuthorizationDecision(true);
         }
 
         // evaluate if objects owners equal to principal
         if (resource.hasOwner()) {
             long ownerCount = ownerAssociationRepository.countByOwnerUuidAndResourceAndObjectUuidIn(UUID.fromString(principal.getUserUuid()), resource, objectUUIDs.stream().filter(u -> u.getValue() != null).map(SecuredUUID::getValue).toList());
             if (ownerCount == objectUUIDs.size()) {
-                return ACCESS_GRANTED;
+                return new AuthorizationDecision(true);
             }
         }
 
         // evaluate group members permissions on objects assigned groups
+        AuthorizationDecision groupMembersPermissionsDecision = evaluateGroupMembersPermissions(principal, methodInvocation, resource, resourceAction, properties, objectUUIDs);
+        if (groupMembersPermissionsDecision != null) return groupMembersPermissionsDecision;
+
+        return new AuthorizationDecision(false);
+    }
+
+    private AuthorizationDecision evaluateGroupMembersPermissions(CzertainlyUserDetails principal, MethodInvocation methodInvocation, Resource resource, ResourceAction resourceAction, Map<String, String> properties, List<SecuredUUID> objectUUIDs) {
         if (resource.hasGroups() && (resourceAction == ResourceAction.LIST || resourceAction == ResourceAction.DETAIL)) {
             properties.clear();
             properties.put(NAME_PROP_NAME, Resource.GROUP.getCode());
@@ -127,61 +135,68 @@ public class ExternalMethodAuthorizationVoter extends AbstractExternalAuthorizat
                 // load groups associations
                 List<String> groupUuids = groupAssociationRepository.findByResourceAndObjectUuid(resource, objectUuid.getValue()).stream().map(g -> g.getGroupUuid().toString()).toList();
                 if (groupUuids.isEmpty()) {
-                    return ACCESS_DENIED;
+                    return new AuthorizationDecision(false);
                 }
                 OpaRequestedResource opaRequest = new OpaRequestedResource(properties);
                 opaRequest.setObjectUUIDs(groupUuids);
 
                 OpaResourceAccessResult result = this.checkAccess(principal.getRawData(), opaRequest);
                 if (!result.isAuthorized()) {
-                    logger.trace(String.format("Access to the method '%s' object has been denied by missing group member permissions.", methodInvocation.getMethod().getName()));
-                    return ACCESS_DENIED;
+                    log.trace(String.format("Access to the method '%s' object has been denied by missing group member permissions.", methodInvocation.getMethod().getName()));
+                    return new AuthorizationDecision(false);
                 }
             }
 
-            logger.trace(String.format("Access to the method '%s' object has been granted by group member permissions.", methodInvocation.getMethod().getName()));
-            return ACCESS_GRANTED;
+            log.trace(String.format("Access to the method '%s' object has been granted by group member permissions.", methodInvocation.getMethod().getName()));
+            return new AuthorizationDecision(true);
         }
-
-        return ACCESS_DENIED;
+        return null;
     }
 
-    private int vote(String principal, MethodInvocation methodInvocation, List<ExternalAuthorizationConfigAttribute> attributes) {
+    private static AuthorizationDecision shouldSkipAuthorizationCheck(List<SecuredUUID> objectUUIDs, boolean hasSecurityFilter, Resource resource, ResourceAction resourceAction) {
+        if ((objectUUIDs.isEmpty() && !hasSecurityFilter) || (!resource.hasOwner() && (!resource.hasGroups() || (resourceAction != ResourceAction.LIST && resourceAction != ResourceAction.DETAIL)))) {
+            return new AuthorizationDecision(false);
+        }
+        return null;
+    }
+
+    private AuthorizationDecision check(String principal, MethodInvocation methodInvocation, List<ExternalAuthorizationConfigAttribute> attributes) {
+
         try {
             Map<String, String> properties = attributes
                     .stream()
                     .filter(this::shouldBeSendToOpa)
-                    .collect(Collectors.toMap(ExternalAuthorizationConfigAttribute::getAttributeName, ExternalAuthorizationConfigAttribute::getAttributeValueAsString));
+                    .collect(Collectors.toMap(ExternalAuthorizationConfigAttribute::attributeName, ExternalAuthorizationConfigAttribute::getAttributeValueAsString));
 
             Optional<ParentUUIDGetter> parentUUIDGetter = getParentUUIDGetter(attributes);
             if (!Resource.NONE.getCode().equals(properties.get(PARENT_NAME_PROP_NAME))) {
-                int result = voteResource(principal, methodInvocation, properties, parentUUIDGetter, true);
-                if (result == ACCESS_DENIED) {
+                AuthorizationDecision result = checkResource(principal, methodInvocation, properties, parentUUIDGetter, true);
+                if (!result.isGranted()) {
                     AuthHelper.setDeniedPermissionResourceAction(properties.get(PARENT_NAME_PROP_NAME), properties.get(PARENT_ACTION_PROP_NAME));
                     return result;
                 }
             }
 
-            return voteResource(principal, methodInvocation, properties, parentUUIDGetter, false);
+            return checkResource(principal, methodInvocation, properties, parentUUIDGetter, false);
         } catch (Exception e) {
-            logger.error(String.format("Unable verify access to the method '%s'. Voting to deny access.", methodInvocation.getMethod().getName()), e);
-            return ACCESS_DENIED;
+            log.error(String.format("Unable verify access to the method '%s'. Voting to deny access.", methodInvocation.getMethod().getName()), e);
+            return new AuthorizationDecision(false);
         }
     }
 
-    private int voteResource(String principal, MethodInvocation methodInvocation, Map<String, String> properties, Optional<ParentUUIDGetter> parentUUIDGetter, boolean parentResource) {
-        Map<String, String> voteProperties = properties;
+    private AuthorizationDecision checkResource(String principal, MethodInvocation methodInvocation, Map<String, String> properties, Optional<ParentUUIDGetter> parentUUIDGetter, boolean parentResource) {
+        Map<String, String> checkProperties = properties;
 
         if (parentResource) {
             Map<String, String> parentProperties = properties.entrySet().stream().collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
             parentProperties.put(NAME_PROP_NAME, properties.get(PARENT_NAME_PROP_NAME));
             parentProperties.put(ACTION_PROP_NAME, properties.get(PARENT_ACTION_PROP_NAME));
-            voteProperties = parentProperties;
+            checkProperties = parentProperties;
         }
-        voteProperties.remove(PARENT_NAME_PROP_NAME);
-        voteProperties.remove(PARENT_ACTION_PROP_NAME);
+        checkProperties.remove(PARENT_NAME_PROP_NAME);
+        checkProperties.remove(PARENT_ACTION_PROP_NAME);
 
-        OpaRequestedResource resource = new OpaRequestedResource(voteProperties);
+        OpaRequestedResource resource = new OpaRequestedResource(checkProperties);
 
         // UUIDs of objects the operation is executed on
         List<SecuredUUID> objectUUIDs = parentResource ? extractParentUUIDsFromMethodArguments(methodInvocation) : extractUUIDsFromMethodArguments(methodInvocation);
@@ -189,9 +204,9 @@ public class ExternalMethodAuthorizationVoter extends AbstractExternalAuthorizat
         // Parent UUID Getter not used for now, remove later
         if (!parentResource && parentUUIDGetter.isPresent()) {
             if (objectUUIDs.isEmpty()) {
-                logger.error("ParentUUIDGetter specified but no object uuids were found. Access will be denied.");
-                AuthHelper.setDeniedPermissionResourceAction(voteProperties.get(NAME_PROP_NAME), voteProperties.get(ACTION_PROP_NAME));
-                return ACCESS_DENIED;
+                log.error("ParentUUIDGetter specified but no object uuids were found. Access to method %s will be denied.".formatted(methodInvocation.getMethod().getName()));
+                AuthHelper.setDeniedPermissionResourceAction(checkProperties.get(NAME_PROP_NAME), checkProperties.get(ACTION_PROP_NAME));
+                return new AuthorizationDecision(false);
             } else {
                 List<String> parentsUUIDs = parentUUIDGetter.get().getParentsUUID(
                         objectUUIDs.stream()
@@ -208,19 +223,23 @@ public class ExternalMethodAuthorizationVoter extends AbstractExternalAuthorizat
         }
 
         OpaResourceAccessResult result = this.checkAccess(principal, resource);
+        return decideBasedOnOpaResult(methodInvocation, result, checkProperties);
+    }
+
+    private AuthorizationDecision decideBasedOnOpaResult(MethodInvocation methodInvocation, OpaResourceAccessResult result, Map<String, String> checkProperties) {
         if (result.isAuthorized()) {
-            logger.trace(
+            log.trace(
                     String.format(
                             "Access to the method '%s' has been granted by the following rules [%s].",
                             methodInvocation.getMethod().getName(),
                             String.join(",", result.getAllow())
                     )
             );
-            return ACCESS_GRANTED;
+            return new AuthorizationDecision(true);
         } else {
-            logger.trace(String.format("Access to the method '%s' has been denied.", methodInvocation.getMethod().getName()));
-            AuthHelper.setDeniedPermissionResourceAction(voteProperties.get(NAME_PROP_NAME), voteProperties.get(ACTION_PROP_NAME));
-            return ACCESS_DENIED;
+            log.trace(String.format("Access to the method '%s' has been denied.", methodInvocation.getMethod().getName()));
+            AuthHelper.setDeniedPermissionResourceAction(checkProperties.get(NAME_PROP_NAME), checkProperties.get(ACTION_PROP_NAME));
+            return new AuthorizationDecision(false);
         }
     }
 
@@ -233,7 +252,7 @@ public class ExternalMethodAuthorizationVoter extends AbstractExternalAuthorizat
         try {
             return this.opaClient.checkResourceAccess(OpaPolicy.METHOD.policyName, resource, principal, new OpaRequestDetails(null));
         } catch (Exception e) {
-            logger.error(
+            log.error(
                     
                             "An error occurred during the authorization request to the OPA policy '%s'.".formatted(
                             OpaPolicy.METHOD.policyName),
@@ -247,12 +266,12 @@ public class ExternalMethodAuthorizationVoter extends AbstractExternalAuthorizat
         @SuppressWarnings("unchecked")
         Optional<Class<ParentUUIDGetter>> parentUUIDGetterClass = attributes.stream()
                 .filter(att -> {
-                    Object value = att.getAttributeValue();
+                    Object value = att.attributeValue();
                     return (value instanceof Class<?> c) &&
                             ParentUUIDGetter.class.isAssignableFrom(c) &&
                             !NoOpParentUUIDGetter.class.isAssignableFrom(c);
                 })
-                .map(att -> (Class<ParentUUIDGetter>) att.getAttributeValue())
+                .map(att -> (Class<ParentUUIDGetter>) att.attributeValue())
                 .findFirst();
 
         Optional<ParentUUIDGetter> parentUUIDGetter = Optional.empty();
@@ -286,19 +305,18 @@ public class ExternalMethodAuthorizationVoter extends AbstractExternalAuthorizat
                 .forEach(arg -> uuids.add((SecuredParentUUID) arg));
 
         Arrays.stream(methodInvocation.getArguments())
-                .filter(arg -> arg instanceof List<?> l && !l.isEmpty() && l.get(0) instanceof SecuredParentUUID)
+                .filter(arg -> arg instanceof List<?> l && !l.isEmpty() && l.getFirst() instanceof SecuredParentUUID)
                 .forEach(arg -> uuids.addAll(((List<SecuredParentUUID>) arg)));
 
         return uuids;
     }
 
-    @SuppressWarnings("unchecked")
     private boolean hasSecurityFilterParam(MethodInvocation methodInvocation) {
-        return Arrays.stream(methodInvocation.getArguments()).anyMatch(arg -> arg instanceof SecurityFilter);
+        return Arrays.stream(methodInvocation.getArguments()).anyMatch(SecurityFilter.class::isInstance);
     }
 
     private boolean shouldBeSendToOpa(ExternalAuthorizationConfigAttribute att) {
-        Object value = att.getAttributeValue();
+        Object value = att.attributeValue();
         return value.getClass().isPrimitive() ||
                 value instanceof String ||
                 value instanceof Integer ||
